fix viewport expanding when element dragged off-screen

--- a/front/src/app.css
+++ b/front/src/app.css
@@ -31,4 +31,5 @@ body {
     background-repeat: repeat-x;
     background-size: 16px;
     background-attachment: fixed;
+    overflow: hidden;
 }
